completing readme.md

--- a/poly_noSynchro/index.html
+++ b/poly_noSynchro/index.html
@@ -82,7 +82,7 @@
         lecteurs) et leur reproduction (via les logiciels de réseau et systèmes
         d’exploitation). De même, toute œuvre numérique qui n’est pas elle-même
         un programme informatique ne peut exister qu’au sein du cadre que lui
-        aura assigné un logiciel préconçu. 
+        aura assigné un logiciel préconçu. </p>
         <p class="p-indent">
           Chaque œuvre d’art numérique
         participe donc de l’art logiciel au sens large, au moins dans la mesure
