untrack .vscode, clean up readme and index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dix Hypothèses sur l'Art Logiciel - Florian Cramer</title>
-        <style>
+    <style>
       * {
         margin: 0;
         padding: 0;
@@ -93,7 +93,7 @@
         text-transform: uppercase;
         font-family: AntiqueSerie;
       }
-      
+
       blockquote {
         margin: 0 0 0 60px;
       }
@@ -2762,35 +2762,46 @@
           <div class="print-option">
             <div class="option-label">F/E</div>
             <div class="option-text">
-              <a href="./poly_noSynchro/index.html">2 Colonnes par page <span class="arrow">↘</span></a>
+              <a href="./poly_noSynchro/index.html"
+                >2 Colonnes par page <span class="arrow">↘</span></a
+              >
             </div>
           </div>
 
           <div class="print-option">
             <div class="option-label">F/E</div>
             <div class="option-text">
-              <a href="./poly_2L_synchro/index.html">2 Colonnes par page [synchronisé] <span class="arrow">↘</span></a>
+              <a href="./poly_2L_synchro/index.html"
+                >2 Colonnes par page [synchronisé]
+                <span class="arrow">↘</span></a
+              >
             </div>
           </div>
 
           <div class="print-option">
             <div class="option-label">F/E</div>
             <div class="option-text">
-              <a href="./poly_samespread/index.html">1 Colonne par page <span class="arrow">↘</span></a>
+              <a href="./poly_samespread/index.html"
+                >1 Colonne par page <span class="arrow">↘</span></a
+              >
             </div>
           </div>
 
           <div class="print-option">
             <div class="option-label">F/E/I</div>
             <div class="option-text">
-              <a href="./poly_samepage_3L/index.html">3 Colonnes par page <span class="arrow">↘</span></a>
+              <a href="./poly_samepage_3L/index.html"
+                >3 Colonnes par page <span class="arrow">↘</span></a
+              >
             </div>
           </div>
 
           <div class="print-option">
             <div class="option-label">F/E/D/I</div>
             <div class="option-text">
-              <a href="./poly_samepage_4L/index.html">4 Colonnes par page <span class="arrow">↘</span></a>
+              <a href="./poly_samepage_4L/index.html"
+                >4 Colonnes par page <span class="arrow">↘</span></a
+              >
             </div>
           </div>
         </div>
@@ -2802,13 +2813,20 @@
           <p>
             This project was created to showcase the new parallel-flows
             functionalities of Paged.js, developed by Julien Taquet, as part of
-            the EPE European research project, funded by <a href="https://nlnet.nl/" target="_blank">NLNet</a>.
+            the EPE European research project, funded by
+            <a href="https://nlnet.nl/" target="_blank">NLNet</a>.
           </p>
 
           <p>
-            <a href="https://epe.esad-gv.fr/" target="_blank">EPE–Écran Papier Éditer</a><br />
+            <a href="https://epe.esad-gv.fr/" target="_blank"
+              >EPE–Écran Papier Éditer</a
+            ><br />
             <a href="https://pagedjs.org/" target="_blank">Paged.js</a><br />
-            <a href="https://github.com/pagedjs/pagedjs-experiments/tree/main/--paged-parallel-flows" target="_blank">Download parallel-flows plugin</a>
+            <a
+              href="https://github.com/pagedjs/pagedjs-experiments/tree/main/--paged-parallel-flows"
+              target="_blank"
+              >Download parallel-flows plugin</a
+            >
           </p>
 
           <p>
@@ -2829,13 +2847,30 @@
           </p>
 
           <p>
-            The Italian and German translations were generated using Sonnet 4
-            – Claude.
+            The Italian and German translations were generated using Sonnet 4 –
+            Claude.
           </p>
+          <p>Links to remote repos :</p>
 
           <p>
-            Design by <a href="https://romainlaurent.com/">Romain Laurent ↗</a><br />
-            Code by <a href="https:\\raphaelbottura.com" target="_blank">Raphaël Bottura ↗</a>
+            GitLab :
+            <a
+              href="https://gitlab.com/esad-gv1/epe/pagedjs_multiflows"
+              target="_blank"
+              >https://gitlab.com/esad-gv1/epe/pagedjs_multiflows</a
+            ><br />
+            GitHub :
+            <a href="https://github.com/rbottura/pagedjs_collab" target="_blank"
+              >https://github.com/rbottura/pagedjs_collab</a
+            >
+          </p>
+          <p>
+            Design by <a href="https://romainlaurent.com/">Romain Laurent ↗</a
+            ><br />
+            Code by
+            <a href="https:\\raphaelbottura.com" target="_blank"
+              >Raphaël Bottura ↗</a
+            >
           </p>
 
           <p>2025</p>
@@ -2923,9 +2958,9 @@
           .forEach((link) => link.classList.remove("active"));
         document.getElementById(`nav-${lang}`).classList.add("active");
       }
-      window.addEventListener('DOMContentLoaded', function() {
-            showLanguage('fr');
-        });
+      window.addEventListener("DOMContentLoaded", function () {
+        showLanguage("fr");
+      });
     </script>
   </body>
 </html>
